{
  "chat": "Chat",
  "createGame": "Create game",
  "editGame": "Edit game",
  "edit": "Edit",
  "description": "Description",
  "variant": "Variant",
  "privateChat": "Private chat",
  "privateChatDisabled": "Private chat disabled",
  "groupChat": "Group chat",
  "groupChatDisabled": "Group chat disabled",
  "publicChat": "Public chat",
  "publicChatDisabled": "Public chat disabled",
  "gameCreated": "Game created",
  "currentPhase": "Current phase",
  "phaseLength": "Phase length",
  "differentPhaseForNonMovement": "Different length for non movement phases",
  "nonMovementPhaseLength": "Non movement phase length",
  "days": "Days",
  "hours": "Hours",
  "minutes": "Minutes",
  "hasGameMaster": "Has game master",
  "gameUpdated": "Game updated",
  "youCantEditGamesYouDontOwn": "You can't edit games you aren't game master for",
  "cantChangeVariant": "You can't change variant of an existing game",
  "gameVariant_Var_": "Game variant: {variant}",
  "@gameVariant_Var_": {
    "placeholders": {
      "variant": {}
    }
  },
  "created_Date_": "Created: {date}",
  "@created_Date_": {
    "placeholders": {
      "date": {
        "type": "DateTime",
        "format": "yMd"
      }
    }
  },
  "started_Date_": "Started: {date}",
  "@started_Date_": {
    "placeholders": {
      "date": {
        "type": "DateTime",
        "format": "yMd"
      }
    }
  },
  "finished_Date_": "Finished: {date}",
  "@finished_Date_": {
    "placeholders": {
      "date": {
        "type": "DateTime",
        "format": "yMd"
      }
    }
  },
  "phaseDeadline_Date_": "Phase deadline: {deadline}",
  "@phaseDeadline_Date_": {
    "placeholders": {
      "deadline": {}
    }
  },
  "nonMovementPhaseDeadline_Date_": "Non movement phase deadline: {deadline}",
  "@nonMovementPhaseDeadline_Date_": {
    "placeholders": {
      "deadline": {}
    }
  },
  "nationSelection_Type_": "Nation selection: {type}",
  "@nationSelection_Type_": {
    "placeholders": {
      "type": {}
    }
  },
  "minimumReliability_V_": "Minimum reliability: {v}",
  "@minimumReliability_V_": {
    "placeholders": {
      "v": {}
    }
  },
  "minimumQuickness_V_": "Minimum quickness: {v}",
  "@minimumQuickness_V_": {
    "placeholders": {
      "v": {}
    }
  },
  "minimumRating_V_": "Minimum rating: {v}",
  "@minimumRating_V_": {
    "placeholders": {
      "v": {}
    }
  },
  "unnamed": "unnamed",
  "spring": "Spring",
  "fall": "Fall",
  "adjustment": "Adjustment",
  "movement": "Movement",
  "retreat": "Retreat",
  "loading": "Loading...",
  "noGamesFound": "No games found",
  "orders": "Orders",
  "map": "Map",
  "logInToSeeYourGames": "Log in to see your games",
  "openGames": "Open games",
  "liveGames": "Live games",
  "finishedGames": "Finished games",
  "login": "Log in",
  "logout": "Log out",
  "loggedOut": "Logged out",
  "loggedIn": "Logged in",
  "forum": "Forum",
  "source": "Source",
  "home": "Home",
  "army": "Army",
  "fleet": "Fleet",
  "myGames": "My games",
  "error": "Error",
  "join": "Join",
  "share": "Share",
  "view": "View",
  "w": "w",
  "d": "d",
  "h": "h",
  "m": "m",
  "random": "Random",
  "preferences": "Preferences",
  "nationSelection": "Nation selection",
  "private": "Private",
  "manageAsGameMaster": "Manage as game master",
  "gameMasterOnlyAllowedInPrivateGames": "Game master only allowed in private games due to risk of abuse.",
  "asGameMasterYouCan": "As game master, you can pause/resume games and control who joins (and as what nation). To play yourself, you need to join as a player after creating your game.",
  "createdBy_V_": "Created by: {v}",
  "@createdBy_V_": {
    "placeholders": {
      "v": {}
    }
  },
  "description_V_": "Description: {v}",
  "@description_V_": {
    "placeholders": {
      "v": {}
    }
  },
  "rules_V_": "Rules: {v}",
  "@rules_V_": {
    "placeholders": {
      "v": {}
    }
  },
  "requireAssignmentToJoin": "Require assignment to join",
  "onlyPlayersAssignedByGM": "Only players assigned by the game master can join.",
  "players": "Players",
  "anonymous": "Anonymous",
  "username": "Username",
  "username_V_": "Username: {v}",
  "@username_V_": {
    "placeholders": {
      "v": {}
    }
  },
  "profile": "Profile",
  "appName": "corpulentpangolin",
  "changeProfilePicture": "Change profile picture",
  "newProfilePictureURL": "New profile picture URL",
  "logInToSeeYourProfile": "Log in to see your profile.",
  "unableToLoadURL": "Unable to load URL: {err}",
  "@unableToLoadURL": {
    "placeholders": {
      "err": {}
    }
  },
  "profileUpdated": "Profile updated",
  "reliability_": "Reliability:",
  "nmrPhases_": "NMR phases:",
  "nonNMRPhases_": "Non NMR phases:",
  "quickness_": "Quickness:",
  "committedPhases_": "Committed phases:",
  "nonCommittedPhases_": "Non committed phases:",
  "rating_": "Rating:",
  "c_of_p_playersJoined": "{c} of {p} players joined",
  "@c_of_p_playersJoined": {
    "placeholders": {
      "c": {},
      "p": {}
    }
  },
  "hasEitherMinRelOrMinQuick": "Has either minimum reliability or minimum quickness",
  "hasMinimumRating": "Has minimum rating",
  "hasMustering": "Start with roll call",
  "hasAutoReplacements": "NMR players can be replaced",
  "hasGracePeriods": "Has grace periods",
  "hasExtensions": "Has extensions",
  "hasGraceOrExt": "Has grace periods or extensions",
  "votesRequiredForExtension_V_": "Votes required for extension: {v}",
  "@votesRequiredForExtension_V_": {
    "placeholders": {
      "v": {}
    }
  },
  "someChatsDisabled": "Some chats disabled",
  "someoneYouBanned": "Someone you banned, or someone banned by you, is already in the game",
  "youDonMatchRequirements": "Your reliability, quickness, or rating doesn't match the requirements for the game",
  "youAreAlreadyInGame": "You have already joined this game",
  "gameFull": "Game is already full",
  "youAreNotLoggedIn": "You aren't logged in",
  "gameJoined": "Game joined",
  "leave": "Leave",
  "youCantLeaveStartedGames": "You can't leave started games",
  "leftGame": "Left game",
  "limitWhenGameStarts": "Limit the time of day when the game can start",
  "onlyStartTheGameBetween_F_and_T": "Only start the game between {F} and {T}",
  "@onlyStartTheGameBetween_F_and_T": {
    "placeholders": {
      "F": {},
      "T": {}
    }
  },
  "dontStartGameBefore": "Don't start the game before",
  "dontStartGameAfter": "Don't start the game after",
  "allowGracePeriods": "Allow grace periods",
  "gracePeriodLength": "Automatic phase extension when player is inactive",
  "gracesPerPlayer": "Maximum number of automatic phase extensions per player per game",
  "gracesPerPhase": "Maximum number of automatic phase extensions per phase",
  "allowExtensions": "Allow phase extensions",
  "maxExtensionLength": "Maximum length of player initiated phase extension",
  "extensionsPerPlayer": "Maximum number of player initiated phase extensions per player per game",
  "extensionsPerPhase": "Maximum number of player initiated phase extensions per phase",
  "votesRequiredForExtraExtension": "Player votes required for extra player initiated phase extension",
  "minimumReliabilityToJoin": "Minimum reliability to join",
  "minimumQuicknessToJoin": "Minimum quickness to join",
  "minimumRatingToJoin": "Minimum rating to join",
  "logInToEnableThisButton": "Log in to enable this button",
  "youAreNotAMemberOfThisGame": "You are not a member of this game",
  "thisGameRequiresAnInvitation": "This game requires an invitation to join",
  "readyToStart": "Ready",
  "markedAsReady": "Marked as ready",
  "loggedInAs": "Logged in as",
  "userID": "User ID",
  "copiedToClipboard": "Copied to clipboard",
  "nation": "Nation",
  "unspecified": "Unspecified"
}
